# AIGO

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  INSTALL_GUIDE.md  MODEL_GUIDE.md  OPTIMIZATION_RESULTS.md  PATH_GUIDE.md  README.md  README_WUBUNTU.md  UPLOAD_GUIDE.md  add_config.ps1  advanced_calculator.py  aigo-cli.py  basic_demo.py  calculator_demo.py  calculator_output.txt  config.json  debug_test.py  demo_integration.py  demo_without_mcp.py  dev-setup.ps1  docker-compose.part1.yml  docker-compose.yml  example.py  final_calculator.py  git_upload.bat  git_upload.sh  github_adapter_clean.py  http_server.py  install.py  install_wizard.py  model_manager.py  pyproject.toml  pytest.ini  requirements-all.txt  requirements-api.txt  requirements-core.txt  requirements-dev.txt  (+39 more)
docs/: .gitignore  Makefile  README.md  ai_rules.md  api.md  architecture.md  conf.py  cross_platform_guide.md  enterprise_deployment.md  improvements.md  index.rst  installation.md  installation.rst  navigation_guide.md  scientific_usage.md  visualization_guide.md  wubuntu_support.md
examples/: advanced_features.py  advanced_memory_and_ide.py  advanced_memory_features.py  advanced_memory_features_simple.py  code_translation_demo.py  hidden_features_demo.py  model_adapter_demo.py  model_restructuring_demo.py  optimized_model_demo.py  prompt_engineering_demo.py  run_simple.py  standalone_vector_store.py  test_model_runner.py  use_adapters.py  use_memory.py  visualization_demo.py  wubuntu_integration_demo.py  wubuntu_kernel_dev_demo.py
scripts/: force_migrate.py  phase2_migrate_sources.py  (+6 more)
(+134 files in other folders)
